--- a/app/Resources/views/admin-v2/teach/cloud-file/resource-table.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/resource-table.html.twig
@@ -15,8 +15,8 @@
             <th width="10%">{{ 'cloud_file.category'|trans }}</th>
             <th width="10%">{{ 'cloud_file.refer_course'|trans }}</th>
           {% endif %}
-          <th width="24%">{{ 'material.common_table.th.transcode_status'|trans }}<a class="es-icon es-icon-help text-normal mls js-table-popover"></a></th>
-          <th {% if pageType == 'attachment'%}width="10%"{% endif %}>{{ 'operation'|trans }}</th>
+          <th width="20%">{{ 'material.common_table.th.transcode_status'|trans }}<a class="es-icon es-icon-help text-normal mls js-table-popover"></a></th>
+          <th width="10%" {% if pageType == 'attachment'%}width="10%"{% endif %}>{{ 'operation'|trans }}</th>
         </tr>
       </thead>
       <tbody></tbody>
