--- a/web/themes/default/views/default/index.html.twig
+++ b/web/themes/default/views/default/index.html.twig
@@ -64,21 +64,23 @@
                             {% endif %}
                           </span>
                           <span class="class-student hidden-md"><i class="es-icon es-icon-people"></i>{{ classroom.studentNum + classroom.auditorNum }}</span>
-                          <span class="class-price">
-                            {% if setting('coin.coin_enabled') and setting('coin.price_type') == 'Coin' %}
-                              {% if classroom.price > 0 %}
-                                {{ classroom.price * setting('coin.cash_rate') }} {{ setting('coin.coin_name', '虚拟币') }}
+                          {% if classroom.hidePrice != '1' %}
+                            <span class="class-price">
+                              {% if setting('coin.coin_enabled') and setting('coin.price_type') == 'Coin' %}
+                                {% if classroom.price > 0 %}
+                                  {{ classroom.price * setting('coin.cash_rate') }} {{ setting('coin.coin_name', '虚拟币') }}
+                                {% else %}
+                                  免费
+                                {% endif %}
                               {% else %}
-                                免费
+                                {% if classroom.price > 0 %}
+                                  {{ classroom.price }}元
+                                {% else %}
+                                  免费
+                                {% endif %}
                               {% endif %}
-                            {% else %}
-                              {% if classroom.price > 0 %}
-                                {{ classroom.price }}元
-                              {% else %}
-                                免费
-                              {% endif %}
-                            {% endif %}
-                          </span>
+                            </span>
+                          {% endif  %}
                         </div>
                         <div class="course-num">共{{ classroom.courseNum }}课程</div>
                       </div>
