--- a/app/Resources/views/my/learning/course/courses-block-item.html.twig
+++ b/app/Resources/views/my/learning/course/courses-block-item.html.twig
@@ -13,7 +13,7 @@
               <a style="margin-top: 6px" class="certificate-tag" tabindex="0" role="button" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="top" data-html="true" title="{{ 'explore.classroom.certificate_tag'|trans }}" data-content="{{ 'course.catalogue.certificate_obtain'|trans }}">{{ 'explore.classroom.certificate_tag_short'|trans }}</a>
             {% endif %}
 
-            <a class="cd-link-major" href="{{ path('course_set_show', {id:courseSet.id}) }}">{{ courseSet.title|raw }}</a>
+            <a class="cd-link-major" style="display: -webkit-box; max-width: 300px; -webkit-box-orient: vertical; -webkit-line-clamp: 1; overflow: hidden; text-overflow: ellipsis;" href="{{ path('course_set_show', {id:courseSet.id}) }}">{{ courseSet.title|raw }}</a>
           </div>
 
           {% if classroom|default(null) %}
