--- a/app/Resources/views/course/widgets/course-set-price.html.twig
+++ b/app/Resources/views/course/widgets/course-set-price.html.twig
@@ -1,6 +1,6 @@
 {% set courseSet = courseSet|wrap('courseSet.price') %}
 
-{% if course.hidePrice != '1'  %}
+{% if course.hidePrice|default(0) != '1'  %}
 <span class="course-price-widget">
       <span class="
             {% if courseSet.maxCoursePrice == 0 %}
