--- a/app/Resources/views/file-chooser/parts/materiallib-choose.html.twig
+++ b/app/Resources/views/file-chooser/parts/materiallib-choose.html.twig
@@ -53,7 +53,7 @@
   <input type="hidden" name="types" value="{{ fileTypes|default('') }}">
 	<input type="hidden" name="keyword">
   <input type="hidden" name="batch" value="{{ batch|default(0) }}">
-  <input type="hidden" name="categoryId" value="">
+  <input type="hidden" name="fileCategoryId" value="">
 </div>
 <div class="js-material-list chooser-list-parent">
 	<div class="empty">{{'file_chooser.materiallib_choose.wating'|trans}}</div>
