feat: #113928 管理后台用户管理，合并学员/员工的登录日志，并挪动登录日志、在线用户到左侧一级菜单下。

--- a/app/Resources/views/admin-v2/user/login-record/index.html.twig
+++ b/app/Resources/views/admin-v2/user/login-record/index.html.twig
@@ -36,9 +36,9 @@
 <table id="teacher-table" class="table table-striped table-hover" data-search-form="#user-search-form">
   <thead>
     <tr>
-      <th>{{'user.fields.username_student_label'|trans}}</th>
+      <th>{{'user.fields.username_label'|trans}}</th>
       {% include 'org/parts/table-thead-tr.html.twig' %}
-      <th>{{'admin.user.fields.student_email'|trans}}</th>
+      <th>{{'admin.user.fields.user_email'|trans}}</th>
       <th>{{'admin.user.login_record.fields.login_time_and_ip_label'|trans}}</th>
       <th>{{'admin.user.login_record.fields.login_address_label'|trans}}</th>
       <th width="12%">{{'admin.user.login_record.fields.view_record_label'|trans}}</th>
