feat: #113187 引用课程次数

--- a/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
@@ -84,7 +84,7 @@
         <span style="display:block">{{ categories[cloudFile.categoryId].name|default('-') }}</span>
       </td>
       <td class="vertical-middle">
-        <a onclick="window.emitter.emit('open-refer-course-modal', { fileId: {{ cloudFile.id }}, usedCount: {{ cloudFile.usedCount }}, fileType: '{{ cloudFile.type }}', filename: '{{ cloudFile.filename }}', fileLength: {{ cloudFile.length }} })" style="display:block; cursor: pointer;">{{ cloudFile.usedCount }}</a>
+        <a onclick="window.emitter.emit('open-refer-course-modal', { fileId: {{ cloudFile.id }}, usedCount: {{ cloudFile.usedCourseCount }}, fileType: '{{ cloudFile.type }}', filename: '{{ cloudFile.filename }}', fileLength: {{ cloudFile.length }} })" style="display:block; cursor: pointer;">{{ cloudFile.usedCourseCount }}</a>
       </td>
     {% endif %}
 
