feat: #112678 优化材料题展示样式并添加图片预览功能

--- a/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
@@ -295,6 +295,7 @@
       padding: 2px 8px;
       border-radius: 4px;
       border: 1px solid @primary-color;
+      width: fit-content;
     }
   }
 }
@@ -311,6 +312,17 @@
 
   .ibs-content {
     padding-left: 8px;
+  }
+
+  .answer-mode-tag {
+    color: @primary-color;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    padding: 2px 8px;
+    border-radius: 4px;
+    border: 1px solid @primary-color;
+    width: fit-content;
   }
 }
 
