--- a/app/Resources/views/admin-v2/teach/cloud-file/resource-table.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/resource-table.html.twig
@@ -3,17 +3,17 @@
     <table class="table table-striped table-hover mtl" id="materials-table" data-url="{{ path('admin_v2_cloud_file_render_table')}}">
       <thead>
         <tr>
-          <th><input type="checkbox" data-role="batch-select"></th>
+          <th width="5%"><input type="checkbox" data-role="batch-select"></th>
           <th width="25%">{{ 'material.common_table.th.file_name'|trans }}</th>
-          <th>{{ 'type'|trans }}</th>
-          <th>{{ 'material.common_table.th.file_size_time'|trans }}</th>
-          <th>{{ 'cloud_file.upload_time'|trans }}</th>
+          <th width="10%">{{ 'type'|trans }}</th>
+          <th width="10%">{{ 'material.common_table.th.file_size_time'|trans }}</th>
+          <th width="10%">{{ 'cloud_file.upload_time'|trans }}</th>
           {% if pageType == 'attachment'%}
             <th>{{ 'cloud_file.application'|trans }}</th>
           {% endif %}
           {% if pageType == 'file'%}
             <th width="10%">{{ 'cloud_file.category'|trans }}</th>
-            <th width="5%">{{ 'cloud_file.refer_course'|trans }}</th>
+            <th width="10%">{{ 'cloud_file.refer_course'|trans }}</th>
           {% endif %}
           <th width="10%">{{ 'material.common_table.th.transcode_status'|trans }}<a class="es-icon es-icon-help text-normal mls js-table-popover"></a></th>
           <th width="10%" {% if pageType == 'attachment'%}width="10%"{% endif %}>{{ 'operation'|trans }}</th>
