--- a/app/Resources/views/admin-v2/user/user-manage/create-by-mobile-or-email-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/create-by-mobile-or-email-modal.html.twig
@@ -47,7 +47,7 @@
       </div>
       <div class="col-md-7 controls">
         <div style="position: relative">
-          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control">
+          <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" style="padding-right: 30px">
           <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-confirm-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
           <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-confirm-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
         </div>
