bugfix: #112875 调整页面样式修复结果页面样式类名拼写错误

--- a/app/Resources/static-src/app/less/v2/page/assesment.less
+++ b/app/Resources/static-src/app/less/v2/page/assesment.less
@@ -1,4 +1,4 @@
-.ibs-resutl-item {
+.ibs-result-item {
   @media (max-width: @screen-xs-min) {
     margin: 0 !important;
     width: 100% !important;
