--- a/app/Resources/views/homework/result.html.twig
+++ b/app/Resources/views/homework/result.html.twig
@@ -27,7 +27,7 @@
     <input type="hidden" class="js-testpaper-type" value='{{ type|default('default') }}'>
     <div class="ibs-vue">
       <div class="ant-row">
-        <div class="ant-col ibs-resutl-item">
+        <div class="ant-col ibs-result-item">
           <div class="item-bank-result review-result">
             <div class="review-result__icon">
               {% if answerReport.grade == 'unpassed' or answerReport.grade == 'none' %}
