feat: #112679 项库组件图片查看功能升级

--- a/h5/src/h5/assets/styles/main.scss
+++ b/h5/src/h5/assets/styles/main.scss
@@ -47,6 +47,7 @@
 @import './containers/info-collection/index.scss';
 @import './containers/course/component/wechat-subscribe.scss';
 @import './containers/wrong-question-book/index.scss';
+@import './containers/item-bank-exercise/index.scss';
 
 // modules
 @import './modules/e-drag.scss';
