--- a/app/Resources/views/course/widgets/course-grid-new.html.twig
+++ b/app/Resources/views/course/widgets/course-grid-new.html.twig
@@ -37,13 +37,13 @@
         <div style="position: absolute; top: 0; right: 0; border-radius: 0 4px 0 8px; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; background: rgba(0, 0, 0, 0.40);"><i class="es-icon es-icon-video color-white" style="font-size: 12px; margin-right: 4px;"></i>{{'site.badge.try_watch'|trans}}</div>
       {% endif %}
       {% if  course.hidePrice != '1' and is_plugin_installed('Vip') and setting('vip.enabled') and course.vipLevelId|default(0) > 0 %}
-        <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: rgba(0, 0, 0, 0.80);">会员免费</div>
+        <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: rgba(0, 0, 0, 0.80);">{{ 'site.badge.membership_free'|trans }}</div>
       {% else %}
         {% if videoMaxLevel == '2k' %}
-          <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: rgba(0, 0, 0, 0.80);">2k 优享</div>
+          <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #FFF; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: rgba(0, 0, 0, 0.80);">{{'site.badge.2k'|trans}}</div>
         {% endif %}
         {% if videoMaxLevel == '4k' %}
-          <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #492F0B; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: linear-gradient(270deg, #F7D27B -33.33%, #FCEABE 100%);">4k 臻享</div>
+          <div style="position: absolute; z-index: 10; left: 0; bottom: 0; color: #492F0B; font-size: 12px; font-weight: 500; line-height: 20px; padding: 2px 8px; border-radius: 0 12px 0 0; background: linear-gradient(270deg, #F7D27B -33.33%, #FCEABE 100%);">{{'site.badge.4k'|trans}}</div>
         {% endif %}
       {% endif %}
       {{ lazy_img(filepath(course_set_cover(courseSet, 'large'), 'courseSet.png'), 'img-responsive', courseSet.title|raw) }}
