--- a/app/Resources/views/default/groups.html.twig
+++ b/app/Resources/views/default/groups.html.twig
@@ -7,8 +7,8 @@
 <section class="dynamic-section {{config.background|default("")}}">
   <div class="container">
     <div class="text-line gray">
-      <h5><span>{{ config.title|default(config.defaultTitle) }}</span><div class="line"></div></h5>
-      <div class="subtitle">{{ config.subTitle|default(config.defaultSubTitle) }}</div>
+      <h5><span>{{ config.title|default('group.title'|trans) }}</span><div class="line"></div></h5>
+      <div class="subtitle">{{ config.subTitle|default('group.subtitle'|trans) }}</div>
     </div>
     <div class="dynamic-section-main row">
       {% if config.select1 =='checked'%}
