--- a/app/Resources/static-src/app/less/page/goods/product-info.less
+++ b/app/Resources/static-src/app/less/page/goods/product-info.less
@@ -7,6 +7,9 @@
       width: 100%;
     }
     .info-left__nav {
+      text-wrap: nowrap;
+      display: flex;
+      justify-content: space-around;
       position: relative;
       padding: 16px 0;
       margin-bottom: 0;
@@ -18,7 +21,6 @@
       border-bottom: 1px solid #ebebeb;
       li {
         display: inline-block;
-        margin: 0 80px;
         @media (max-width: 992px) {
           margin: 0 20px;
         }
