--- a/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
@@ -347,6 +347,10 @@
   .ibs-table {
     margin-left: 16px;
   }
+
+  .ant-radio-disabled+span {
+    color: rgba(0, 0, 0, .65) !important;
+  }
 }
 
 .ibs-cursor-default {
