--- a/app/Resources/views/classroom/course/list.html.twig
+++ b/app/Resources/views/classroom/course/list.html.twig
@@ -64,10 +64,12 @@
                   </div>
                 </div>
                 {% endif %}
-                <div class="hidden-xs class-course-price">
-                  {{ 'classroom.origin_price'|trans }}：
-                  {% include 'course/widgets/price.html.twig' with {courseSet: course.courseSet, shows:'originPrice'} %}
-                </div>
+                {% if classroom.hidePrice == '0' %}
+                  <div class="hidden-xs class-course-price">
+                    {{ 'classroom.origin_price'|trans }}：
+                    {% include 'course/widgets/price.html.twig' with {courseSet: course.courseSet, shows:'originPrice'} %}
+                  </div>
+                {% endif %}
                 {% if setting('goods_setting.show_review', '1') == 1 %}
                   <div class="class-course-score">
                     {{ web_macro.star(course.rating) }}
