--- a/app/Resources/static-src/app/less/v2/page/course-manage/course-header.less
+++ b/app/Resources/static-src/app/less/v2/page/course-manage/course-header.less
@@ -32,6 +32,17 @@
     }
   }
 
+  .item-bank-nav-header-section.nav {
+    margin-bottom: 0;
+    border: none;
+    .nav-header-section__item {
+      margin: 0;
+      @media (max-width: @screen-xs-min) {
+        margin: 0 16px !important;
+      }
+    }
+  }
+
   .courseset-manage-header {
     @media (max-width: @screen-xs-min) {
       padding: 16px;
