--- a/app/Resources/views/courseset-manage/sidebar.html.twig
+++ b/app/Resources/views/courseset-manage/sidebar.html.twig
@@ -51,7 +51,7 @@
           {% if courseSet.parentId == 0 %}
             <li class="cd-sidebar__item {% if course_side_nav == 'item-bank' %}active{% endif %}">
               <a href="{{ path('course_set_manage_course_item_bank', {courseSetId: courseSet.id, courseId: curCourse.id}) }}">
-                题库练习管理
+                {{ 'course.question_bank_practice_management'|trans }}
                 {% if hasLessonChanged|default(0) %}
                   <i class="es-icon es-icon-tip color-danger"></i>
                 {% endif %}
@@ -65,10 +65,12 @@
             </a>
           </li>
 
-          <li class="cd-sidebar__item {% if course_side_nav == 'ai-companion-study' %}active{% endif %}" style="position: relative">
-            <div style="color: white; font-size: 12px; line-height: 16px; font-weight: 500; padding: 0 6px; background-color: #FF4D4F; border-radius: 6px 6px 6px 0; position: absolute; left: 105px; top: 5px">NEW</div>
+          <li class="cd-sidebar__item {% if course_side_nav == 'ai-companion-study' %}active{% endif %}">
             <a href="{{ path('course_set_manage_course_ai_companion_study', {courseSetId: courseSet.id, courseId: curCourse.id}) }}">
-              AI伴学服务
+              <div style="position: relative; width: fit-content">
+                <div>{{ 'course.ai_assisted_learning_service'|trans }}</div>
+                <div style="color: white; font-size: 12px; line-height: 16px; font-weight: 500; padding: 0 2px; background-color: #FF4D4F; border-radius: 6px 6px 6px 0; position: absolute; right: -25px; top: -10px">NEW</div>
+              </div>
             </a>
           </li>
           {#录播管理#}
@@ -127,7 +129,7 @@
         </li>
         <li class="cd-sidebar__item {% if course_side_nav == 'wrong-questions' %}active{% endif %}">
           <a
-            href="{{ path('course_manage_wrong_questions', {id: curCourse.id}) }}">{{ '学员错题'|trans }}
+            href="{{ path('course_manage_wrong_questions', {id: curCourse.id}) }}">{{ 'course.student_incorrect_questions'|trans }}
           </a>
         </li>
         <li class="cd-sidebar__heading">
