--- a/app/Resources/views/courseset-manage/navbar.html.twig
+++ b/app/Resources/views/courseset-manage/navbar.html.twig
@@ -1,17 +1,24 @@
 {% set assistant = data('AssistantPermission', {courseId: courseSet.defaultCourseId}) %}
 <ul class="nav nav-tabs nav-header-section cd-mt24 clearfix">
   {% if not is_un_multi_courseset(courseSet.id) %}
-    <li class="nav-header-section__item cd-ml32 {% if side_nav == 'base' %}active{% endif %}">
-      {% if courseSet.locked %}
-        <a href="{{ path('course_set_manage_sync', {id: courseSet.id, sideNav: 'base'}) }}">
-          <span class="es-icon es-icon-lock mr10" aria-hidden="true"></span>{{ 'course.base'|trans }}
-        </a>
-      {% else %}
-        {% if has_permission('admin_v2_course_content_manage') or 'ROLE_TEACHER' in app.user.roles %}
-          <a href="{{ path('course_set_manage_base', {id: courseSet.id}) }}">{{ 'course.base'|trans }}</a>
+    <div class="pull-left nav-header-section-step">
+      <li class="nav-header-section__item {% if side_nav == 'base' %}active{% endif %}">
+        {% if courseSet.locked %}
+          <a class="nav-header-section__link"
+             href="{{ path('course_set_manage_sync', {id: courseSet.id, sideNav: 'base'}) }}"
+          >
+            <span class="es-icon es-icon-lock mr10" aria-hidden="true"></span>{{ 'course.base'|trans }}
+          </a>
+        {% else %}
+          {% if has_permission('admin_v2_course_content_manage') or 'ROLE_TEACHER' in app.user.roles %}
+            <a class="nav-header-section__link"
+               href="{{ path('course_set_manage_base', {id: courseSet.id}) }}">{{ 'course.base'|trans }}
+            </a>
+          {% endif %}
         {% endif %}
-      {% endif %}
-    </li>
+      </li>
+    </div>
+
     {% if not has_mul_courses(courseSet.id) %}
       <div class="pull-left nav-header-section-step" id="step-2">
         <li class="nav-header-section__item {% if side_nav == 'default-course-info' %}active{% endif %}">
