--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -160,6 +160,7 @@
 
           <input type="hidden" name="emailToken" value="">
           <input type="hidden" name="captcha_enabled" value="{{ setting('auth.captcha_enabled') }}"/>
+          <input type="hidden" name="email_enabled" value="{{ setting('auth.email_enabled') }}"/>
           <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
           <input type="hidden" name="registerVisitId" value="">
           <input type="hidden" name="emailOrMobile" value="">
