--- a/app/Resources/views/classroom-manage/index.html.twig
+++ b/app/Resources/views/classroom-manage/index.html.twig
@@ -10,7 +10,7 @@
   <div class="cd-main__heading">
     <div class="cd-main__title">{{ 'classroom.basic_setting'|trans }}</div>
   </div>
-  <div id="vue3-basic-settings"
+  <div id="vue3-basic-setting"
        data-classroom="{{ classroom|json_encode }}"
        data-tags="{{ tags|default(null)|json_encode }}"
        data-cover="{{ filepath(classroom.largePicture, 'classroom.png') }}"
