--- a/app/Resources/views/classroom-itemBankBind/list.html.twig
+++ b/app/Resources/views/classroom-itemBankBind/list.html.twig
@@ -4,7 +4,7 @@
 {% do script(['vue3/js/classroom/item-bank/index.js']) %}
 
 {% block main %}
-  <div id="item-bank"
+  <div id="vue3-item-bank"
        data-classroom-id="{{ classroom.id }}"
   ></div>
 {% endblock %}
