--- a/app/Resources/views/classroom-manage/item-bank.html.twig
+++ b/app/Resources/views/classroom-manage/item-bank.html.twig
@@ -5,7 +5,7 @@
 {% do script(['vue3/js/classroom-manage/item-bank/index.js']) %}
 
 {% block main %}
-  <div id="item-bank"
+  <div id="vue3-item-bank"
        data-classroom-id="{{ classroom.id }}"
        style="min-height: 800px"
   ></div>
