--- a/app/Resources/views/course-manage/item-bank.html.twig
+++ b/app/Resources/views/course-manage/item-bank.html.twig
@@ -6,7 +6,7 @@
 {% do script(['vue3/js/course-manage/item-bank/index.js']) %}
 
 {% block main %}
-  <div id="item-bank"
+  <div id="vue3-item-bank"
        data-course-id="{{ course.id }}"
        style="margin-left: 200px; min-height: 800px"
   ></div>
