--- a/app/Resources/views/course/tabs/itemBankBind.html.twig
+++ b/app/Resources/views/course/tabs/itemBankBind.html.twig
@@ -1,5 +1,5 @@
 {% do script(['vue3/js/course/item-bank/index.js']) %}
 
-<div id="item-bank"
+<div id="vue3-item-bank"
      data-course-id="{{ course.id }}"
 ></div>
