bugfix: #114268 修复H5微网校-学生题库练习内考试内容显示不全也无法下滑

--- a/h5/src/h5/src/styles/components/item-engine/itembank.scss
+++ b/h5/src/h5/src/styles/components/item-engine/itembank.scss
@@ -168,7 +168,7 @@ $common-padding: 35;
 	}
 
 	.ibs-subject-card {
-		margin: 0 vw(16);
+		margin: 0 vw(16) 60px vw(16);
 		padding: vw(16) vw(16) vw(32);
 		background: #fff;
 		border-radius: vw(12);
