bugfix: #114220 修正优惠券相关文案错误

--- a/app/Resources/views/admin-v2/developer/mock/content-distributor-user.html.twig
+++ b/app/Resources/views/admin-v2/developer/mock/content-distributor-user.html.twig
@@ -5,7 +5,7 @@
       优惠券金额(分): <input type="text" name="couponPrice" value="10000"></input>
     </div>
     <div>
-      优惠卷有效期(天): <input type="text" name="couponExpiryDay" value="{{couponExpireDateStr}}"></input>
+      优惠券有效期(天): <input type="text" name="couponExpiryDay" value="{{couponExpireDateStr}}"></input>
     </div>
     <div>
       token有效期: <input type="text" name="tokenExpireDateStr" value="{{tokenExpireDateStr}}"></input>
