完成国际化

--- a/app/Resources/static-src/app/less/v2/page/my-course.less
+++ b/app/Resources/static-src/app/less/v2/page/my-course.less
@@ -93,6 +93,7 @@
   .my-course-item__title {
     font-size: 20px;
     line-height: 22px;
+    max-width: 350px;
   }
 
   .my-course-item__status {
