--- a/app/Resources/views/my/learning/question-bank/list.html.twig
+++ b/app/Resources/views/my/learning/question-bank/list.html.twig
@@ -8,5 +8,5 @@
 {% block title %}{{'my.learning.question_bank_menu'|trans}} - {{ parent() }}{% endblock %}
 
 {% block main %}
-  <div id="item-bank-list"></div>
+  <div id="vue3-item-bank"></div>
 {% endblock %}
