--- a/h5/src/h5/src/styles/components/item-engine/itembank.scss
+++ b/h5/src/h5/src/styles/components/item-engine/itembank.scss
@@ -168,7 +168,7 @@ $common-padding: 35;
 	}
 
 	.ibs-subject-card {
-		margin: 0 vw(16) 60px vw(16);
+		margin: 0 vw(16);
 		padding: vw(16) vw(16) vw(32);
 		background: #fff;
 		border-radius: vw(12);
@@ -722,7 +722,7 @@ $common-padding: 35;
 
 	.ibs-footer-shadow {
 		height: vw(16);
-		margin: 0 vw(32) 0;
+		margin: 0 vw(32) 60px;
 		background-color: rgba(255, 255, 255, 0.6);
 		border-radius: 0 0 vw(12) vw(12);
 	}
