--- a/app/Resources/views/admin-v2/teach/live-course/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/live-course/index.html.twig
@@ -32,12 +32,14 @@
   <table class="table table-striped table-hover" id="course-table">
     <thead>
     <tr>
-      <th width="45%">{{ setting('course.task_name')|default('admin.setting_course.task'|trans) }}</th>
+      <th style="width: 25%">{{ setting('course.task_name')|default('admin.setting_course.task'|trans) }}</th>
+      <th style="width: 20%">课程</th>
+      <th style="width: 15%">班级</th>
       {% include 'org/parts/table-thead-tr.html.twig' %}
-      <th>{{'admin.live_manage.live_start_time_th'|trans}}</th>
-      <th>{{'admin.live_manage.live_time_long_th'|trans}}</th>
-      <th>{{'admin.live_manage.max_participate_count_th'|trans}}</th>
-      <th>{{ 'operation'|trans }}</th>
+      <th style="width: 15%">{{'admin.live_manage.live_start_time_th'|trans}}</th>
+      <th style="width: 10%">{{'admin.live_manage.live_time_long_th'|trans}}</th>
+      <th style="width: 10%">{{'admin.live_manage.max_participate_count_th'|trans}}</th>
+      <th style="width: 10%">{{ 'operation'|trans }}</th>
     </tr>
     </thead>
     <tbody>
