--- a/app/Resources/views/search/cloud-search-failure.html.twig
+++ b/app/Resources/views/search/cloud-search-failure.html.twig
@@ -9,7 +9,7 @@
           <h3 class="panel-title">{{'cloud_search.result'|trans}}</h3>
         </div>
         <div class="panel-body color-gray">
-         {{errorMessage|default('')}}
+         {{errorMessage|default('cloud_search.error.input_empty')|trans}}
         </div>
       </div>
     </div>
